--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -15,21 +15,26 @@ margin-top:20px;
 .line-con-bis.ln-gray {
   background-color: #dedede;
 }
-
 .add {
   display: inline-block;
-  background-color: transparent; width:100%; height:30px;
+  padding-right: 35px;
+  padding-left: 35px;
+  border-radius: 2px;
+  background-color: transparent;
   box-shadow: #405AB2 0px 0px 0px 1px inset;
   -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
   color: #405AB2;
-
+  font-size: 15px;
+  line-height: 70px;
   font-weight: 500;
   text-align: center;
   text-decoration: none;
   text-transform: capitalize;
 }
 .add:hover {
+  padding-right: 50px;
+  padding-left: 50px;
   background-color: #405AB2;
   color: white;
 }
@@ -50,4 +55,45 @@ margin-top:20px;
 .modify:hover {
   background-color: #21B258;
   color: white;
+}
+
+/*  Initial FAV photo icon */
+.triangle {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 0px;
+  height: 0px;
+  border-top: 60px solid #2c3d47;
+  border-left: 60px solid transparent;
+  opacity: 0.5;
+}
+
+.left-star {
+  position: absolute;
+  top: -47px;
+  right: 11px;
+  z-index: 5;
+  display: block;
+  color: white;
+  font-size: 7px;
+}
+
+.fav-triangle {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 0px;
+  height: 0px;
+  border-top: 60px solid #000;
+  border-left: 60px solid transparent;
+}
+.fav-star {
+  position: absolute;
+  top: -47px;
+  right: 11px;
+  z-index: 5;
+  display: block;
+  color: #FFFD0D;
+  font-size: 7px;
 }
