last one I hope

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -456,7 +456,7 @@ a.filter-star.active{
   background-color: #000;
   color: white;
   text-align: center;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 .img-wrapper {
   position: relative;
