New pages and few modifications

--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -634,3 +634,12 @@ span.ago{
 .move-wrapper{
   margin-left:10px !important;
 }
+
+.series-title{
+  color:#f3655e;
+}
+
+.series-description{
+  color:white;
+  font-size:25px;
+}
